Closed
Bug 1341307
Opened 6 years ago
Closed 6 years ago
Remove useless a "using" declaration
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox54 fixed)
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox54 | --- | fixed |
People
(Reporter: l1peu2tout, Assigned: l1peu2tout)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
853 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:51.0) Gecko/20100101 Firefox/51.0 Build ID: 20170125094131 Steps to reproduce: Running some toolings, I found that some "using" declarations are useless.
Assignee | ||
Updated•6 years ago
|
Attachment #8839497 -
Flags: review?(nical.bugzilla)
Updated•6 years ago
|
Attachment #8839497 -
Attachment is patch: true
Attachment #8839497 -
Attachment mime type: text/x-patch → text/plain
Comment 1•6 years ago
|
||
Comment on attachment 8839497 [details] [diff] [review] mon-patch.diff Review of attachment 8839497 [details] [diff] [review]: ----------------------------------------------------------------- Congrats for you first patch!
Attachment #8839497 -
Flags: review?(nical.bugzilla) → review+
Comment 2•6 years ago
|
||
Attachment #8839497 -
Attachment is obsolete: true
Attachment #8839507 -
Flags: review+
Updated•6 years ago
|
Assignee: nobody → l1peu2tout
Blocks: clang-based-analysis
Comment 3•6 years ago
|
||
try push: https://treeherder.mozilla.org/#/jobs?repo=try&revision=ea04af7b260a66b7652e99fcf941f3755df7c2d9
Pushed by nsilva@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/59f04be1efe9 Remove useless using declaration in SkiaGLGlue.cpp. r=nical
Comment 5•6 years ago
|
||
Bravo for this first patch!
Summary: Remove useless using declarations → Remove useless a "using" declaration
Comment 6•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/59f04be1efe9
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Updated•5 years ago
|
Product: Core → Firefox Build System
Updated•6 months ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•