Bug 1341307 - Remove useless using declaration in SkiaGLGlue.cpp. r=nical